--- a/CMakeLists.txt-org.2022.4.9
+++ b/CMakeLists.txt-org.2022.4.9
@@ -85,9 +85,7 @@ include_directories(
 #   ${catkin_LIBRARIES}
 # )
 
-#add_library(nodelet_uvc_camera src/nodelets.cpp src/camera.cpp src/stereo.cpp src/uvc_cam.cpp)
-# changed by nishi
-add_library(nodelet_uvc_camera src/nodelets.cpp src/camera.cpp src/stereo.cpp src/single_stereo.cpp src/uvc_cam.cpp)
+add_library(nodelet_uvc_camera src/nodelets.cpp src/camera.cpp src/stereo.cpp src/uvc_cam.cpp)
 target_link_libraries(nodelet_uvc_camera ${Boost_LIBRARIES} ${V4L2_LIBRARIES} ${catkin_LIBRARIES})
 
 add_executable(uvc_camera_node src/camera_node.cpp src/camera.cpp src/uvc_cam.cpp)
@@ -95,10 +93,6 @@ target_link_libraries(uvc_camera_node ${Boost_LIBRARIES} ${V4L2_LIBRARIES} ${cat
 
 add_executable(uvc_stereo_node src/stereo_node.cpp src/stereo.cpp src/uvc_cam.cpp)
 target_link_libraries(uvc_stereo_node ${Boost_LIBRARIES} ${V4L2_LIBRARIES} ${catkin_LIBRARIES})
-
-# add by nishi
-add_executable(uvc_single_stereo_node src/single_stereo_node.cpp  src/single_stereo.cpp  src/uvc_cam.cpp)
-target_link_libraries(uvc_single_stereo_node ${Boost_LIBRARIES} ${V4L2_LIBRARIES} ${catkin_LIBRARIES})
 
 #############
 ## Install ##
@@ -115,9 +109,7 @@ target_link_libraries(uvc_single_stereo_node ${Boost_LIBRARIES} ${V4L2_LIBRARIES
 # )
 
 ## Mark executables and/or libraries for installation
-#install(TARGETS nodelet_uvc_camera uvc_camera_node uvc_stereo_node
-# changed by nhishi
-install(TARGETS nodelet_uvc_camera uvc_camera_node uvc_stereo_node uvc_single_stereo_node
+install(TARGETS nodelet_uvc_camera uvc_camera_node uvc_stereo_node
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
